tests/ui/bitfield/field_value_out_of_bounds_signed_32_16u_i16.stderr
error[E0271]: type mismatch resolving `<Field as TryFrom<u16>>::Error == u16`
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_32_16u_i16.rs:6:37
  |
6 | struct BitField(#[field(size = 16)] Field);
  |                                     ^^^^^ expected `u16`, found `Infallible`

error[E0277]: the trait bound `Field: TryFrom<u16>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_32_16u_i16.rs:6:32
  |
6 | struct BitField(#[field(size = 16)] Field);
  |                                ^^^^^-----
  |                                |    |
  |                                |    required by a bound introduced by this call
  |                                the trait `From<u16>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u16>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `u16`
  = note: required for `u16` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u16>`

error[E0277]: the trait bound `Field: From<u16>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_32_16u_i16.rs:6:37
  |
6 | struct BitField(#[field(size = 16)] Field);
  |                                     ^^^^^ the trait `From<u16>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u16>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `u16`
  = note: required for `u16` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u16>`
